tests/NormalTests/paczka1/fuzzy1/26584271.err
Error in line 12: a0KtTtFI S303 21,8
Error in line 15: a0KtTtFI A665 82,6
Error in line 3: wcBh7CEaVuV S802 94,3
Error in line 25: Gf8 S303 345,3
Error in line 22: rWqHX2D3vw4 A665 141,1
Error in line 33: a0KtTtFI A248 38,8
Error in line 35: a0KtTtFI A665 85,6
Error in line 23: zu8r0cN S303 27,5
